Implementation of LSTM Model completed.

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Fal_Detection_System_v2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXvzYQMBHRCMKzFx5VxqhT",
+      "authorship_tag": "ABX9TyMCCl7ltRmLXoQA8Rcgvqsh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mojtabaSefidi/Fall-Detection-System/blob/master/Fal_Detection_System_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mojtabaSefidi/Fall-Detection-System/blob/master/Fall_Detection_System_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -89,6 +88,23 @@
       "source": [
         "# Implementation"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_confusion_matrix(confusion_matrix):\n",
+        "    df = pd.DataFrame(confusion_matrix, range(len(confusion_matrix)), range(len(confusion_matrix)))\n",
+        "    plt.figure(figsize=(6,4))\n",
+        "    plt.title('Confusion Matrix')\n",
+        "    sn.set(font_scale=1) # for label size\n",
+        "    sn.heatmap(df, annot=True, annot_kws={\"size\": 12},fmt='.0f',cmap='Greens') # font size\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "Gi1u8eYf4VuO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -321,8 +337,11 @@
         "               y_train,\n",
         "               X_test,\n",
         "               y_test,\n",
-        "               batch_size = 128,\n",
-        "               n_epochs = 100,\n",
+        "               mlp_batch_size = 128,\n",
+        "               lstm_batch_size = 32,\n",
+        "               lstm_buffer_size = 10000,\n",
+        "               mlp_epochs = 100,\n",
+        "               lstm_epochs = 100,\n",
         "               filters = 250,               \n",
         "               kernel_size = 3,\n",
         "               units = 250,\n",
@@ -335,8 +354,11 @@
         "        self.y_train = y_train\n",
         "        self.X_test = X_test\n",
         "        self.y_test = y_test\n",
-        "        self.batch_size = batch_size\n",
-        "        self.n_epochs = n_epochs\n",
+        "        self.mlp_batch_size = mlp_batch_size\n",
+        "        self.lstm_batch_size = lstm_batch_size\n",
+        "        self.lstm_buffer_size = lstm_buffer_size\n",
+        "        self.mlp_epochs = mlp_epochs\n",
+        "        self.lstm_epochs = lstm_epochs\n",
         "        self.filters = filters\n",
         "        self.kernel_size = kernel_size\n",
         "        self.units = units\n",
@@ -360,7 +382,7 @@
         "    self.mlp_history = self.mlp_model.fit(\n",
         "        self.X_train,\n",
         "        self.y_train,\n",
-        "        batch_size = self.batch_size,\n",
+        "        batch_size = self.mlp_batch_size,\n",
         "        epochs = self.n_epochs,\n",
         "        shuffle = True,\n",
         "        verbose = 1\n",
@@ -370,19 +392,45 @@
         "    return plot_history(self.mlp_history)\n",
         "\n",
         "  def evaluate_mlp(self):\n",
-        "    self.mlp_prediction = self.mlp_model.predict(self.X_test, verbose = 1, batch_size = self.batch_size)\n",
+        "    self.mlp_prediction = self.mlp_model.predict(self.X_test, verbose = 1, batch_size = self.mlp_batch_size)\n",
         "    print(classification_report(self.y_test, self.mlp_prediction))\n",
         "    print(confusion_matrix(self.y_test, self.mlp_prediction))\n",
         "    \n",
+        "  def data_process_lstm(self):\n",
+        "    lstm_X_train = self.X_train.reshape(self.X_train.shape[0], self.X_train.shape[-1], 1)\n",
+        "    self.lstm_X_test = self.X_test.reshape(self.X_test.shape[0], self.X_test.shape[-1], 1)\n",
+        "\n",
+        "    self.train_dataset_sequence = tf.data.Dataset.from_tensor_slices((lstm_X_train , self.y_train))\n",
+        "    self.train_dataset_sequence = self.train_dataset_sequence.cache().shuffle(self.lstm_buffer_size).batch(self.lstm_batch_size).repeat()\n",
+        "\n",
+        "    # self.test_dataset_sequence = tf.data.Dataset.from_tensor_slices((lstm_X_test , self.y_test))\n",
+        "    # self.test_dataset_sequence = self.test_dataset_sequence.cache().shuffle(self.lstm_buffer_size).batch(self.lstm_batch_size).repeat()\n",
         "\n",
         "  def define_lstm(self):\n",
-        "    return\n",
+        "    self.lstm_model = tf.keras.models.Sequential([tf.keras.layers.LSTM(units=32, return_sequences=True, input_shape = self.X_train_sequence.shape[-2:]),\n",
+        "                                            tf.keras.layers.LSTM(units=64, return_sequences=True),\n",
+        "                                            tf.keras.layers.LSTM(units=32),\n",
+        "                                            tf.keras.layers.Dense(1,activation='sigmoid')])\n",
+        "\n",
+        "    self.lstm_model.compile(loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
         "  \n",
         "  def train_lstm(self):\n",
-        "    return\n",
+        "    steps = int(np.ceil(self.X_train_sequence.shape[0] / self.lstm_batch_size))\n",
+        "    \n",
+        "    self.lstm_history = self.lstm_model.fit(\n",
+        "      self.train_dataset_sequence, \n",
+        "      epochs = self.lstm_epochs,\n",
+        "      steps_per_epoch = steps,\n",
+        "      # class_weight=class_weight,\n",
+        "      )\n",
         "\n",
         "  def evaluate_lstm(self):\n",
-        "    return\n",
+        "    self.lstm_prediction = self.lstm_model.predict(self.lstm_X_test, batch_size=self.lstm_batch_size)\n",
+        "    self.lstm_prediction[self.lstm_prediction >= 0.5] = 1\n",
+        "    self.lstm_prediction[self.lstm_prediction < 0.5] = 0\n",
+        "\n",
+        "    print(classification_report(self.y_test, self.lstm_prediction.ravel()))\n",
+        "    plot_confusion_matrix(confusion_matrix(self.y_test, self.lstm_prediction.ravel()))\n",
         "    \n",
         "  def define_svm(self):\n",
         "    self.svm_model = LinearSVC(C = 0.0001)\n",
@@ -391,7 +439,7 @@
         "  def evaluate_svm(self):\n",
         "    self.svm_prediction = self.svm_model.predict(self.X_test)\n",
         "    print(classification_report(self.y_test, self.svm_prediction))\n",
-        "    print(confusion_matrix(self.y_test, self.svm_prediction))\n",
+        "    plot_confusion_matrix(confusion_matrix(self.y_test, self.svm_prediction))\n",
         "  \n",
         "    def define_LGR(self):\n",
         "    self.LGR_model = LogisticRegression()\n",
@@ -400,7 +448,7 @@
         "  def evaluate_LGR(self):\n",
         "    self.LGR_prediction = self.LGR_model.predict(self.X_test)\n",
         "    print(classification_report(self.y_test, self.LGR_prediction))\n",
-        "    print(confusion_matrix(self.y_test, self.LGR_prediction))\n",
+        "    plot_confusion_matrix(confusion_matrix(self.y_test, self.LGR_prediction))\n",
         "  \n",
         "  def define_knn(self):\n",
         "    self.knn_model = KNeighborsClassifier(n_neighbors=4)\n",
@@ -409,11 +457,14 @@
         "  def evaluate_knn(self):\n",
         "    self.knn_prediction = self.knn_model.predict(self.X_test)\n",
         "    print(classification_report(self.y_test, self.knn_prediction))\n",
-        "    print(confusion_matrix(self.y_test, self.knn_prediction))\n",
+        "    plot_confusion_matrix(confusion_matrix(self.y_test, self.knn_prediction))\n",
         "\n",
-        "  def define_ensemble_concept(self):\n",
-        "\n",
-        "  def evaluate_ensemble_concept(self):"
+        "  def define_ensemble_concept(prediction1, prediction2):\n",
+        "    return np.logical_or(prediction1 , prediction2.T.ravel().round())\n",
+        "  \n",
+        "  def evaluate_ensemble_concept(self):\n",
+        "    print(classification_report(self.y_test, define_ensemble_concept(prediction1, prediction2)))\n",
+        "    plot_confusion_matrix(confusion_matrix(self.y_test, define_ensemble_concept(prediction1, prediction2)))"
       ],
       "metadata": {
         "id": "lXXuUHUODbJL"
@@ -428,44 +479,6 @@
       },
       "source": [
         "Prediction based on Ensemble Concept"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fEiwDqETny3u",
-        "outputId": "21d8f5f8-d722-41cb-db38-f6c558915c75"
-      },
-      "source": [
-        "def ensmble_concept(Knn_prediction,model_prediction):\n",
-        "  return np.logical_or(Knn_prediction , model_prediction.T.ravel().round())\n",
-        "\n",
-        "result = ensmble_concept(y_pred,predictions)\n",
-        "print(classification_report(y_test, result))\n",
-        "print(confusion_matrix(y_test, result))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.99      0.98      0.99     22857\n",
-            "           1       0.65      0.81      0.72      1072\n",
-            "\n",
-            "    accuracy                           0.97     23929\n",
-            "   macro avg       0.82      0.90      0.85     23929\n",
-            "weighted avg       0.98      0.97      0.97     23929\n",
-            "\n",
-            "[[22379   478]\n",
-            " [  201   871]]\n"
-          ]
-        }
       ]
     },
     {
