fix some bug in structure of methods in DatasetProcessor().

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCCl7ltRmLXoQA8Rcgvqsh",
+      "authorship_tag": "ABX9TyNUGkjDdu286I53xkYPxqCP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +14,6 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
     "gpuClass": "standard"
   },
   "cells": [
@@ -27,6 +25,30 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mojtabaSefidi/Fall-Detection-System/blob/master/Fall_Detection_System_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x4Hyqy-KZ3Eu",
+        "outputId": "4f452f2d-0fe0-4382-b44b-bc8e33ebe188"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
       ]
     },
     {
@@ -52,9 +74,15 @@
         "import numpy as np\n",
         "import glob\n",
         "import os\n",
-        "window_size = 200\n"
+        "window_size = 200\n",
+        "from sklearn.utils import class_weight\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sn\n",
+        "sn.set()\n",
+        "\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,10 +100,9 @@
         "id": "_XAle2BBAfFr"
       },
       "source": [
-        "!gdown --id 1kyTRhIFhqwRkf9gERof1Xm5FVQ-klLVA\n",
-        "!gdown --id 1gvOuxPc8dNgTnxuvPcVuCKifOf98-TV0\n",
-        "!unzip SisFall_dataset.zip\n",
-        "!unzip SisFall_enhanced.zip"
+        "\n",
+        "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
+        "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
       "execution_count": null,
       "outputs": []
@@ -109,28 +136,26 @@
     {
       "cell_type": "code",
       "source": [
-        "class AddressProcessor:\n",
+        "class AddressProcessor():\n",
         "\n",
         "  def __init__(self, \n",
-        "               data_path = \"SisFall_dataset/\")\n",
-        "  self.data_path = data_path\n",
+        "               data_path = \"SisFall_dataset/\"):\n",
+        "    self.data_path = data_path\n",
         "  \n",
         "  def get_file_name(self):\n",
-        "  allfiles = []\n",
-        "  allFolders = glob.glob(self.data_path + \"*\")\n",
-        "  for files in allFolders:\n",
-        "      allfiles.append(glob.glob(files+\"/*.txt\"))\n",
-        "  if 'desktop.ini' in allfiles:\n",
-        "        allfiles.remove('desktop.ini')\n",
-        "  return np.hstack(allfiles)\n",
+        "    allfiles = []\n",
+        "    allFolders = glob.glob(self.data_path + \"*\")\n",
+        "    for files in allFolders:\n",
+        "        allfiles.append(glob.glob(files+\"/*.txt\"))\n",
+        "    if 'desktop.ini' in allfiles:\n",
+        "          allfiles.remove('desktop.ini')\n",
+        "    return np.hstack(allfiles)\n",
         "\n",
         "  def split_address(self):\n",
-        "  dataset_address = self.get_file_name()\n",
-        "  np.random.shuffle(dataset_address)\n",
-        "  self.train, self.test = np.split(dataset_address, [int(len(dataset_address)*0.7)])\n",
-        "\n",
-        "  def main(self):\n",
-        "    self.split_address()\n"
+        "    dataset_address = self.get_file_name()\n",
+        "    np.random.shuffle(dataset_address)\n",
+        "    return np.split(dataset_address, [int(len(dataset_address)*0.7)])\n",
+        "\n"
       ],
       "metadata": {
         "id": "jDXCmXMKosSB"
@@ -208,17 +233,14 @@
     {
       "cell_type": "code",
       "source": [
-        "class DatasetProcessor:\n",
+        "class DatasetProcessor():\n",
         "  \n",
         "  def __init__(self, \n",
-        "               train_dataset,\n",
-        "               test_dataset,\n",
-        "               window_size,\n",
-        "               down_sampleing_factor)\n",
-        "  self.train_dataset = train_dataset\n",
-        "  self.test_dataset = test_dataset\n",
-        "  self.window_size = window_size\n",
-        "  self.down_sampleing_factor = down_sampleing_factor\n",
+        "               train_dataset_saving_path,\n",
+        "               test_dataset_saving_path\n",
+        "               ):\n",
+        "    self.train_dataset_saving_path = train_dataset_saving_path\n",
+        "    self.test_dataset_saving_path = test_dataset_saving_path\n",
         "  \n",
         "  def read_data(self, data_path):\n",
         "    data = pd.read_csv(data_path, header=None)\n",
@@ -230,6 +252,8 @@
         "    return data\n",
         "\n",
         "  def add_features(self, data_path):\n",
+        "    ''' Feature Extraction should be changed.'''\n",
+        "\n",
         "    dataset = self.read_data(data_path)\n",
         "    new_dataset = pd.DataFrame()\n",
         "    new_dataset['acc_1'] = dataset.apply(\n",
@@ -238,7 +262,7 @@
         "        lambda row: sqrt((row.MMA8451Q_x ** 2 + row.MMA8451Q_y ** 2 + row.MMA8451Q_z ** 2)), axis=1)\n",
         "    new_dataset['geo'] = dataset.apply(\n",
         "        lambda row: sqrt((row.ITG3200_x ** 2 + row.ITG3200_y ** 2 + row.ITG3200_z ** 2)), axis=1)\n",
-        "    new_dataset['label'] = get_label(data_path)\n",
+        "    new_dataset['label'] = self.get_label(data_path)\n",
         "    return np.round(new_dataset.to_numpy(),2)\n",
         "\n",
         "  def get_label(self, data_path):\n",
@@ -246,53 +270,44 @@
         "    if label =='D':\n",
         "      return int(0)\n",
         "    elif label =='F':  \n",
-        "      label_path = data_path.replace('dataset','enhanced')\n",
+        "      label_path = data_path.replace('dataset', 'enhanced')\n",
         "      labels = pd.read_csv(label_path,header=None)\n",
         "      labels[labels == 2] = 1\n",
         "      return labels\n",
         "\n",
-        "  def datasets_to_nparray(self):\n",
+        "  def datasets_to_nparray(self, datasets_address_array):\n",
         "    result = np.empty((0, 4), int)\n",
         "    for address in datasets_address_array:\n",
         "      result = np.concatenate(\n",
-        "          (result,self.add_features(read_data(address),address)),axis=0)\n",
+        "          (result,self.add_features(self.read_data(address),address)),axis=0)\n",
         "    return result\n",
         "  \n",
-        "  def windowing(self, dataset):\n",
-        "    window = self.window_size * (dataset.shape[1]-1)\n",
-        "    cut = dataset.shape[0] % self.window_size\n",
+        "  def windowing(self, dataset, window_size):\n",
+        "    window = window_size * (dataset.shape[1]-1)\n",
+        "    cut = dataset.shape[0] % window_size\n",
         "    feature = dataset[:-cut,0:-1]\n",
         "    label = dataset[:-cut,-1]\n",
         "    feature = feature.ravel().reshape(feature.size//window,window)\n",
-        "    label = label.reshape(label.size//self.window_size,self.window_size)\n",
+        "    label = label.reshape(label.size// window_size, window_size)\n",
         "    label = label.sum(axis=1)\n",
         "    label[label > 0] = 1\n",
-        "    return feature,label\n",
+        "    return feature, label\n",
         "\n",
-        "  def dataset_to_tensor(self):\n",
-        "    test_feature, test_label = self.windowing(self.datasets_to_nparray(self.test_dataset),self.window_size)\n",
-        "    np.savez('Sisfall_data_test', inputs=test_feature, targets=test_label)\n",
-        "    train_feature, train_label = self.windowing(self.datasets_to_nparray(self.test_dataset),self.window_size)\n",
-        "    np.savez('Sisfall_data_train', inputs=train_feature, targets=train_label)\n",
-        "\n",
-        "  def dataset_loader(self):\n",
-        "    npz = np.load(\"Sisfall_data_train.npz\")\n",
-        "    self.train_inputs = preprocessing.scale(npz[\"inputs\"].astype(np.float))\n",
-        "    self.train_targets = npz[\"targets\"].astype(np.int)\n",
+        "  def dataset_to_tensor(self, window_size, dataset, saving_path):\n",
+        "    features, labels = self.windowing(self.datasets_to_nparray(dataset), window_size)\n",
+        "    return np.savez(saving_path, inputs=features, targets=labels)\n",
         "    \n",
-        "    npz = np.load(\"Sisfall_data_test.npz\")\n",
-        "    self.test_inputs = preprocessing.scale(npz[\"inputs\"].astype(np.float))\n",
-        "    self.test_targets = npz[\"targets\"].astype(np.int)\n",
-        "\n",
-        "  def downsampling(self):\n",
-        "      positive = self.train_inputs[self.train_inputs['targets']==1]\n",
-        "      negative = self.train_inputs[self.train_inputs['targets']==0].sample(n=int(len(positive)*self.down_sampleing_factor))\n",
+        "  def dataset_loader(self, data_path):\n",
+        "    npz = np.load(data_path)\n",
+        "    return npz[\"inputs\"].astype(np.float), npz[\"targets\"].astype(np.int)\n",
+        "  \n",
+        "  def downsampling(self, dataset, down_sampleing_factor):\n",
+        "      positive = dataset[dataset['targets']==1]\n",
+        "      negative = dataset[dataset['targets']==0].sample(n=int(len(positive)* down_sampleing_factor))\n",
         "      return pd.concat([positive, negative], ignore_index=True).sample(frac=1).reset_index(drop=True)\n",
-        "\n",
-        "  def main(self):\n",
-        "    self.dataset_to_tensor()\n",
-        "    self.dataset_loader()\n",
-        "    self.downsampling()\n"
+        "  \n",
+        "  def generate_class_weight(self, label):\n",
+        "    return class_weight.compute_class_weight('balanced', np.unique(label), label)"
       ],
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
@@ -330,72 +345,49 @@
     {
       "cell_type": "code",
       "source": [
-        "class Models:\n",
+        "class Models():\n",
         "\n",
         "  def __init__(self, \n",
         "               X_train,\n",
         "               y_train,\n",
         "               X_test,\n",
         "               y_test,\n",
-        "               mlp_batch_size = 128,\n",
-        "               lstm_batch_size = 32,\n",
-        "               lstm_buffer_size = 10000,\n",
-        "               mlp_epochs = 100,\n",
-        "               lstm_epochs = 100,\n",
-        "               filters = 250,               \n",
-        "               kernel_size = 3,\n",
-        "               units = 250,\n",
-        "               optimizer = tf.optimizers.SGD,\n",
-        "               drop_rate = 0.4,\n",
-        "               learning_rate = 0.02,\n",
-        "               validation_split = 0.10\n",
         "               ):\n",
+        "        \n",
         "        self.X_train = X_train\n",
         "        self.y_train = y_train\n",
         "        self.X_test = X_test\n",
         "        self.y_test = y_test\n",
-        "        self.mlp_batch_size = mlp_batch_size\n",
-        "        self.lstm_batch_size = lstm_batch_size\n",
-        "        self.lstm_buffer_size = lstm_buffer_size\n",
-        "        self.mlp_epochs = mlp_epochs\n",
-        "        self.lstm_epochs = lstm_epochs\n",
-        "        self.filters = filters\n",
-        "        self.kernel_size = kernel_size\n",
-        "        self.units = units\n",
-        "        self.optimizer = optimizer\n",
-        "        self.drop_rate = drop_rate\n",
-        "        self.learning_rate = learning_rate\n",
-        "        self.validation_split = validation_split\n",
+        "        \n",
         "\n",
-        "  def define_mlp(self):\n",
+        "  def define_mlp(self, input_size, hidden_layer_size, output_size):\n",
         "\n",
         "    self.mlp_model = tf.keras.Sequential([\n",
-        "                                tf.keras.layers.Dense(self.input_size,activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(self.hidden_layer_size, activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(self.hidden_layer_size,activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(self.output_size, activation='sigmoid')\n",
+        "                                tf.keras.layers.Dense(input_size,activation=\"relu\"),\n",
+        "                                tf.keras.layers.Dense(hidden_layer_size, activation=\"relu\"),\n",
+        "                                tf.keras.layers.Dense(hidden_layer_size,activation=\"relu\"),\n",
+        "                                tf.keras.layers.Dense(output_size, activation='sigmoid')\n",
         "                                ])\n",
         "\n",
         "    self.mlp_model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "  def train_mlp(self):\n",
-        "    self.mlp_history = self.mlp_model.fit(\n",
+        "  def train_mlp(self, n_epochs, batch_size, class_weight):\n",
+        "    history = self.mlp_model.fit(\n",
         "        self.X_train,\n",
         "        self.y_train,\n",
-        "        batch_size = self.mlp_batch_size,\n",
-        "        epochs = self.n_epochs,\n",
+        "        batch_size = batch_size,\n",
+        "        epochs = n_epochs,\n",
         "        shuffle = True,\n",
-        "        verbose = 1\n",
-        "          )\n",
+        "        class_weight = class_weight,\n",
+        "        verbose = 1)\n",
+        "    return history\n",
         "\n",
-        "  def plot_cnn_training_history(self):\n",
-        "    return plot_history(self.mlp_history)\n",
+        "  def evaluation(self, model, batch_size):\n",
+        "    prediction = model.predict(self.X_test, verbose=1, batch_size=batch_size)\n",
+        "    print(classification_report(self.y_test, prediction))\n",
+        "    plot_confusion_matrix(confusion_matrix(self.y_test, prediction))\n",
+        "    return prediction\n",
         "\n",
-        "  def evaluate_mlp(self):\n",
-        "    self.mlp_prediction = self.mlp_model.predict(self.X_test, verbose = 1, batch_size = self.mlp_batch_size)\n",
-        "    print(classification_report(self.y_test, self.mlp_prediction))\n",
-        "    print(confusion_matrix(self.y_test, self.mlp_prediction))\n",
-        "    \n",
         "  def data_process_lstm(self):\n",
         "    lstm_X_train = self.X_train.reshape(self.X_train.shape[0], self.X_train.shape[-1], 1)\n",
         "    self.lstm_X_test = self.X_test.reshape(self.X_test.shape[0], self.X_test.shape[-1], 1)\n",
@@ -406,8 +398,8 @@
         "    # self.test_dataset_sequence = tf.data.Dataset.from_tensor_slices((lstm_X_test , self.y_test))\n",
         "    # self.test_dataset_sequence = self.test_dataset_sequence.cache().shuffle(self.lstm_buffer_size).batch(self.lstm_batch_size).repeat()\n",
         "\n",
-        "  def define_lstm(self):\n",
-        "    self.lstm_model = tf.keras.models.Sequential([tf.keras.layers.LSTM(units=32, return_sequences=True, input_shape = self.X_train_sequence.shape[-2:]),\n",
+        "  def define_lstm_model(self, input_shape, output_shape=1):\n",
+        "    self.lstm_model = tf.keras.models.Sequential([tf.keras.layers.LSTM(units=32, return_sequences=True, input_shape=input_shape),\n",
         "                                            tf.keras.layers.LSTM(units=64, return_sequences=True),\n",
         "                                            tf.keras.layers.LSTM(units=32),\n",
         "                                            tf.keras.layers.Dense(1,activation='sigmoid')])\n",
@@ -423,14 +415,6 @@
         "      steps_per_epoch = steps,\n",
         "      # class_weight=class_weight,\n",
         "      )\n",
-        "\n",
-        "  def evaluate_lstm(self):\n",
-        "    self.lstm_prediction = self.lstm_model.predict(self.lstm_X_test, batch_size=self.lstm_batch_size)\n",
-        "    self.lstm_prediction[self.lstm_prediction >= 0.5] = 1\n",
-        "    self.lstm_prediction[self.lstm_prediction < 0.5] = 0\n",
-        "\n",
-        "    print(classification_report(self.y_test, self.lstm_prediction.ravel()))\n",
-        "    plot_confusion_matrix(confusion_matrix(self.y_test, self.lstm_prediction.ravel()))\n",
         "    \n",
         "  def define_svm(self):\n",
         "    self.svm_model = LinearSVC(C = 0.0001)\n",
